# ColdCaller

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  setup.cfg
.github/workflows/: docker.yml  python.yml
coldcaller/: __init__.py
resources/: guilds.json  token_schema.json
src/coldcaller/: __init__.py  __main__.py  account.py  caller.py  creators.py  utils.py
src/coldcaller/resources/: guilds.json  token_schema.json
