[metadata]
name = coldcaller
version = attr: coldcaller.__version__
description = ColdCaller is a program that orchestrates cold calling Discord users with spam messages.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/ColdCaller
download_url = https://github.com/regulad/ColdCaller/archive/refs/heads/master.zip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
license = GPLv3
keywords =
    async
    discord

[options.packages.find]
where = src

[options.package_data]
coldcaller =
    resources/*
    resources/avatars/*

[options.entry_points]
console_scripts =
    coldcaller=coldcaller.__main__:main

[options]
zip_safe = False
package_dir =
    coldcaller=src/coldcaller
packages = coldcaller
include_package_data = True
python_requires = >=3.10
install_requires =
    discord.py-self[voice, server]@git+https://github.com/regulad/discord.py-self.git@add/register
    jsonschema
#d.py-self needs this for captcha handling
    discord-webhook-logger
